--- a/lab/HarmonicGenerator.tex
+++ b/lab/HarmonicGenerator.tex
@@ -39,29 +39,45 @@
 К наиболее важным техническим характеристикам автогенераторов относятся: диапазон рабочих частот, стабильность и точность выставления частоты, уровень гармоник в спектре выходного сигнала, уровень выходного сигнала.
 
 \section{Принцип работы схемы автогенератора}
-Любой автогенератор представляет собой нелинейное устройство, преобразующее энергию источника питания (источника постоянного напряжения) в энергию колебаний. При широком разнообразии известных схем автогенераторов каждая из них, помимо источника питания, должна иметь усилитель и цепь обратной связи. Поэтому в обобщенном виде схема автогенератора (см. рис.\ref{}) содержит четырехполюсник в прямой цепи, соответствующий резонансному усилителю, и четырехполюсник в обратной цепи. (Обратите внимание на взаимное расположение входов и выходов четырехполюсников).
-Простейшая схема автогенератора (схема с трансформаторной обратной связью), где в качестве активного элемента резонансного усилителя использован транзистор, приведена на рис.\ref{}. На рис.\ref{} пунктиром выделен четырехполюсник обратной связи.
+Любой автогенератор представляет собой нелинейное устройство, преобразующее энергию источника питания (источника постоянного напряжения) в энергию колебаний. При широком разнообразии известных схем автогенераторов каждая из них, помимо источника питания, должна иметь усилитель и цепь обратной связи. Поэтому в обобщенном виде схема автогенератора (см. рис.\ref{fig:figure1}) содержит четырехполюсник в прямой цепи, соответствующий резонансному усилителю, и четырехполюсник в обратной цепи. (Обратите внимание на взаимное расположение входов и выходов четырехполюсников).
+Простейшая схема автогенератора (схема с трансформаторной обратной связью), где в качестве активного элемента резонансного усилителя использован транзистор, приведена на рис.\ref{fig:figure2}. На рис.\ref{fig:figure2} пунктиром выделен четырехполюсник обратной связи.
 При изучении автогенератора первостепенное значение имеют два вопроса:
 \begin{enumerate}
 \item Механизм и условия возникновения колебаний.
 \item Существование стационарных колебаний и их устойчивость
 \end{enumerate}
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{circuit/one.pdf}
+	\caption{}
+	\label{fig:figure1}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{circuit/Draft6.pdf}
+	\caption{}
+	\label{fig:figure2}
+\end{figure}
 \section{Самовозбуждение автогенератора}
-При включении в схему автогенератора (рис.\ref{}) источников питания и при выполнении далее обсуждаемых условий в схеме возникают автоколебания. Механизм их возникновения заключается в следующем. Скачек напряжения на коллекторе приведет к быстрому изменению выходного тока транзистора, что вызовет ударное возбуждение резонансного контура. Возникшие в контуре колебания через трансформаторную связь проникают на базу транзистора и вызовут переменную составляющую выходного тока. При соответствующих условиях этот ток будет в фазе с током в резонансном контуре, и в результате возникшие за счет скачка напряжения питания собственные колебания в контуре могут со временем не только не ослабевать, но и усиливаться. По мере увеличения уровня колебаний все в большей степени будет проявляться нелинейность характеристик транзистора, что, в свою очередь, приведет к снижению скорости нарастания колебаний в контуре, а затем и к прекращению их роста - колебания приобретают стационарный характер.
+При включении в схему автогенератора (рис.\ref{fig:figure2}) источников питания и при выполнении далее обсуждаемых условий в схеме возникают автоколебания. Механизм их возникновения заключается в следующем. Скачек напряжения на коллекторе приведет к быстрому изменению выходного тока транзистора, что вызовет ударное возбуждение резонансного контура. Возникшие в контуре колебания через трансформаторную связь проникают на базу транзистора и вызовут переменную составляющую выходного тока. При соответствующих условиях этот ток будет в фазе с током в резонансном контуре, и в результате возникшие за счет скачка напряжения питания собственные колебания в контуре могут со временем не только не ослабевать, но и усиливаться. По мере увеличения уровня колебаний все в большей степени будет проявляться нелинейность характеристик транзистора, что, в свою очередь, приведет к снижению скорости нарастания колебаний в контуре, а затем и к прекращению их роста - колебания приобретают стационарный характер.
 
-При возникновении автоколебаний их уровень на некотором начальном интервале времени остается весьма малым. По этой причине при обсуждении условий самовозбуждения можно пользоваться линейной моделью в виде двух линейных четырехполюсников, соединенных по схеме рис.\ref{}. Обозначим через $K_1(\omega)$ и $K_2(\omega)$ комплексные коэффициенты передачи четырехполюсников прямой и обратной цепи соответственно
+При возникновении автоколебаний их уровень на некотором начальном интервале времени остается весьма малым. По этой причине при обсуждении условий самовозбуждения можно пользоваться линейной моделью в виде двух линейных четырехполюсников, соединенных по схеме на рис.\ref{fig:figure1}. Обозначим через $K_1(\omega)$ и $K_2(\omega)$ комплексные коэффициенты передачи четырехполюсников прямой и обратной цепи соответственно
 \begin{equation*}
-\begin{aligned*}
+\begin{aligned}
 &\dot{K}_1(\omega)=\frac{\dot{U}_{\text{вых}1}}{\dot{U}_{\text{вх}1}} \\
 &\dot{K}_2(\omega)=\frac{\dot{U}_{\text{вых}2}}{\dot{U}_{\text{вх}2}} 
-\end{aligned*}
+\end{aligned}
 \end{equation*}
 где $\dot{U}$ - комплексная амплитуда.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{circuit/two.pdf}
+	\caption{}
+	\label{fig:figure3}
+\end{figure}
+Перерисуем схему рис.\ref{fig:figure1} в более удобном для обсуждения виде (см.рис.\ref{fig:figure3}). Легко заметить, что при $\dot{U}_\text{вх}$, схемы на рис.\ref{fig:figure1} и рис.\ref{fig:figure3} совпадают.
 
-Перерисуем схему рис.\ref{} в более удобном для обсуждения виде (см.рис.\ref{}). Легко заметить, что при $\dot{U}_\text{вх}$, схемы на рис.\ref{} и рис.\ref{} совпадают.
-
-Для линейного четырехполюсника (рис.\ref{}) введем комплексный коэффициент передачи $\dot{K}(\omega)$
+Для линейного четырехполюсника (рис.\ref{fig:figure3}) введем комплексный коэффициент передачи $\dot{K}(\omega)$
 \begin{equation*}
 \dot{K}(\omega)=\frac{\dot{U}_\text{вых}}{\dot{U}_\text{вх}}
 \end{equation*}
@@ -77,7 +93,7 @@
 \dot{K}(\omega)=\frac{\dot{K}_1(\omega)}{1-\dot{K}_1(\omega)\dot{K}_2(\omega)}
 \end{equation*}
 
-Наличие особой точки у комплексной функции $\dot{K}(\omega)$ при условии $1-\dot{K}_1(\omega)\dot{K}_2(\omega)$ физически можно интерпретировать следующим образом: схема на рис.\ref{} при выполнении условия $1-\dot{K}_1(\omega)\dot{K}_2(\omega)$ выдает на выходе колебание с ненулевой амплитудой при бесконечно малой (нулевой) амплитуде колебания на входе. Следовательно, схема  на рис.\ref{} при названных условиях является автогенератором.
+Наличие особой точки у комплексной функции $\dot{K}(\omega)$ при условии $1-\dot{K}_1(\omega)\dot{K}_2(\omega)$ физически можно интерпретировать следующим образом: схема на рис.\ref{} при выполнении условия $1-\dot{K}_1(\omega)\dot{K}_2(\omega)$ выдает на выходе колебание с ненулевой амплитудой при бесконечно малой (нулевой) амплитуде колебания на входе. Следовательно, схема  на рис.\ref{fig:figure3} при названных условиях является автогенератором.
 Условия самовозбуждения вытекают из равенства
 \begin{equation*}
 \dot{K}(\omega)=\frac{\dot{K}_1(\omega)}{1-\dot{K}_1(\omega)\dot{K}_2(\omega)}
@@ -135,18 +151,45 @@ S_\text{ср}(U_0)=b_1+\frac{3}{4}b_3U_0^2+\frac{5}{8}b_5U_0^4+\ldots
 
 Как следует из \eqref{eq:5}, зависимость $S_\text{ср}(U_0)$ полностью определяется коэффициентом аппроксимирующего полинома $b_{2n+1}$, а сами коэффициенты зависят как от типа электронного прибора и нагрузки, так и от режима его работы.
 
-Чтобы выяснить характер зависимость $S_\text{ср}(U_0)$, рассмотрим рис.\ref{}, где изображены проходная характеристика транзистора и ее крутизна.
+Чтобы выяснить характер зависимость $S_\text{ср}(U_0)$, рассмотрим рис.\ref{fig:figure4}a, где изображены проходная характеристика транзистора и ее крутизна.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/4.jpg}
+	\caption{}
+	\label{fig:figure4}
+\end{figure}
+Различие рисунков \ref{fig:figure4}a и \ref{fig:figure4}б состоит в том, что в первом случае с помощью смещения $E_\text{см}$ рабочая точка выбрана на нелинейном участке проходной характеристики, во втором случае - на линейном, где в окрестности рабочей точки $S\approx\text{const}$. При воздействии на усилитель входного синусоидального напряжения с достаточно большой амплитудой $U_0$ крутизна характеристики описывается периодическими функциями времени $S_1(t)$ и $S_2(t)$ , а постоянные составляющие $S'_\text{ср}$ и $S''_\text{ср}$ являются значениями средней крутизны, соответствующими амплитуде $U_0$. Нетрудно заметить, что при увеличении амплитуды входного колебания в случае рис.\ref{fig:figure4}а $S_\text{ср}(U_0)$ будет возрастать, в случае рис.\ref{fig:figure4}б - падать. На рис. \ref{fig:figure5} представлены два характерных вида зависимости $S_\text{ср}(U_0)$, при этом кривая 1 соответствует рис.\ref{fig:figure4}a, кривая 2 - рис.\ref{fig:figure4}б.
+Зависимость \eqref{eq:4} амплитуды первой гармоники выходного тока $I_1$ от амплитуды колебания на входе $U_0$, получившая название "колебательной характеристики", в соответствии с кривыми на рис.\ref{fig:figure5} так же имеет два характерных вида. На рис.\ref{fig:figure6} - кривая 1 и 2 соответствуют кривым 1 и 2 на рис.\ref{fig:figure5}. Поскольку при настройке контура усилителя на частоту усиливаемого сигнала фаза напряжения на контуре совпадает с фазой первой гармоники тока, то кривые на рис.\ref{fig:figure6} отражают и характер зависимостей $U_k=f(U_0)$
 
-Различие рисунков \ref{} и \ref{} состоит в том, что в первом случае с помощью смещения $E_\text{см}$ рабочая точка выбрана на нелинейном участке проходной характеристики, во втором случае - на линейном, где в окрестности рабочей точки $S\approx\text{const}$. При воздействии на усилитель входного синусоидального напряжения с достаточно большой амплитудой $U_0$ крутизна характеристики описывается периодическими функциями времени $S_1(t)$ и $S_2(t)$ , а постоянные составляющие $S'_\text{ср}$ и $S''_\text{ср}$ являются значениями средней крутизны, соответствующими амплитуде $U_0$. Нетрудно заметить, что при увеличении амплитуды входного колебания в случае рис.\ref{} $S_\text{ср}(U_0)$ будет возрастать, в случае рис.\ref{} - падать. На рис. \ref{} представлены два характерных вида зависимости $S_\text{ср}(U_0)$, при этом кривая 1 соответствует рис.\ref{}, кривая 2 - рис.\ref{}.
-Зависимость \eqref{eq:4} амплитуды первой гармоники выходного тока $I_1$ от амплитуды колебания на входе $U_0$, получившая название "колебательной характеристики", в соответствии с кривыми на рис.\ref{} так же имеет два характерных вида. На рис.\ref{} - кривая 1 и 2 соответствуют кривым 1 и 2 на рис.\ref{}. Поскольку при настройке контура усилителя на частоту усиливаемого сигнала фаза напряжения на контуре совпадает с фазой первой гармоники тока, то кривые на рис.\ref{} отражают и характер зависимостей $U_k=f(U_0)$
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/5.jpg}
+	\caption{}
+	\label{fig:figure5}
+\end{figure}
+
 Коэффициент усиления по первой гармонике при работе усилителя в режиме большого сигнала $\dot{K}(\omega_0)$ в соответствии с \eqref{eq:4} и рис.\ref{} является зависимым от $U_0$
 \begin{equation}
 \dot{K}_1(\omega)=\dot{U}_\text{вых}/\dot{U}_\text{вх}=\dot{U}_k/\dot{U}_\text{вх}=f(U_0)
 \label{eq:6}
 \end{equation}
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/6.jpg}
+	\caption{}
+	\label{fig:figure6}
+\end{figure}
+
 \subsection{Ренегеративный усилитель}
-При положительной обратной связи в усилителе, т.е. при $\phi_1(\omega)+\phi_2(\omega)=2\pi n$, при $0<|\dot{K}_1(\omega)||\dot{K}_2(\omega)|<1$ автоколебания в схеме на рис.\ref{} отсутствуют, а сама она представляет собой регенеративный усилитель. В радиотехнике под регенерацией подразумевается частичная компенсация потерь в колебательной системе с помощью положительной обратной связи. Явление регенерации позволяет повысить коэффициент усиления усилителя и его избирательность. Компенсация потерь увеличивает добротность контура. На рис.\ref{} иллюстрируется влияние степени связи(т.е. величины $|\dot{K}_2(\omega)|$) на усиления и избирательность.
+При положительной обратной связи в усилителе, т.е. при $\phi_1(\omega)+\phi_2(\omega)=2\pi n$, при $0<|\dot{K}_1(\omega)||\dot{K}_2(\omega)|<1$ автоколебания в схеме на рис.\ref{} отсутствуют, а сама она представляет собой регенеративный усилитель. В радиотехнике под регенерацией подразумевается частичная компенсация потерь в колебательной системе с помощью положительной обратной связи. Явление регенерации позволяет повысить коэффициент усиления усилителя и его избирательность. Компенсация потерь увеличивает добротность контура. На рис.\ref{fig:figure7} иллюстрируется влияние степени связи(т.е. величины $|\dot{K}_2(\omega)|$) на усиления и избирательность.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/7.jpg}
+	\caption{}
+	\label{fig:figure7}
+\end{figure}
 
 Наряду с отмеченными положительными свойствами регенеративного усилителя, ему свойственен и существенный недостаток - опасность возбуждения усилителя за счет случайных изменений $|\dot{K}_1(\omega)|$.
 \subsection{Ограничение наростающих колебаний. Стационарный режим генератора} 
@@ -155,15 +198,15 @@ S_\text{ср}(U_0)=b_1+\frac{3}{4}b_3U_0^2+\frac{5}{8}b_5U_0^4+\ldots
 |\dot{K}_1(\omega)\dot{K}_2(\omega)|>1
 \end{equation*}
 
-По мере роста амплитуды колебаний все в болышей мере будет проявляться нелинейность усилителя в прямой цепи. При этом средняя крутизна в соответствии с рис.\ref{} будет уменьшаться, снижая $\dot{K}_1(\omega)$. Снижение $\dot{K}_1(\omega)$, в конечном итоге, приведет к тому, что будет выполнено условие
+По мере роста амплитуды колебаний все в болышей мере будет проявляться нелинейность усилителя в прямой цепи. При этом средняя крутизна в соответствии с рис.\ref{fig:figure5} будет уменьшаться, снижая $\dot{K}_1(\omega)$. Снижение $\dot{K}_1(\omega)$, в конечном итоге, приведет к тому, что будет выполнено условие
 \begin{equation*}
 \dot{K}_1(\omega)\dot{K}_2(\omega)=1
 \end{equation*}
 
 На этом рост амплитуды колебаний прекратится: переходный режим завершится, наступит стационарный режим автогенератора.
 
-Определение стационарной амплитуды колебаний удобно проводить с использованием колебательной характеристики (рис.\ref{})
-На рис.\ref{} в одной системе координат представлены две зависимости (см.рис\ref{}) 
+Определение стационарной амплитуды колебаний удобно проводить с использованием колебательной характеристики (рис.\ref{fig:figure8})
+На рис.\ref{fig:figure8} в одной системе координат представлены две зависимости (см.рис\ref{fig:figure2}) 
 \begin{equation*}
 U_{\text{вых}1}=K_1(\omega_0)U_{\text{вх}1}
 \end{equation*}
@@ -187,27 +230,59 @@ K_1(\omega_0)K_2(\omega_0)=1
 \end{equation}
 т.е. соответствует стационарной амплитуде автоколебаний.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/8.jpg}
+	\caption{}
+	\label{fig:figure8}
+\end{figure}
+
 Отметим, что точка $O$ тоже удовлетворяет условию \eqref{eq:7} и соответствует второму стационарному состоянию. Убедимся, что точка a соответствует устойчивому стационарному состоянию, $а$ точка $O$ - неустойчивому.
 
 Пусть схема находится в точке $O$. Если флуктуация приведет к амплитуде $Р$ напряжения база-эмиттер, то амплитуда напряжения на контуре будет $R$: по обратной связи это вызовет увеличение амплитуды напряжения база-эмиттер до величины $S$, что, в свою очередь, вызовет переход в точку $T$ и т.д., пока схема не придет к точке $a$.
 
 Проведем аналогичные рассуждения относительно состояния в точке $a$. Пусть флуктуация выведет амплитуду напряжения на контуре из точки $a$ в точку $b$. Через обратную связь (через точку $c$) это вызовет амплитуду напряжения база-эмиттер величиной $d$, но ей будет соответствовать амплитуда $e$ напряжения на контуре. Другими словами, схема вернется в состояние $a$, что и доказывает устойчивость этого состояния.
 
-Совершенно аналогичным путем легко доказать устойчивость состояний $O$ и $a$ и неустойчивость состояния $b$ для схемы, имеющей иной вид колебательной характеристики (рис.\ref{}).
+Совершенно аналогичным путем легко доказать устойчивость состояний $O$ и $a$ и неустойчивость состояния $b$ для схемы, имеющей иной вид колебательной характеристики (рис.\ref{fig:figure9}).
 
-Режим возбуждения автогенератора, проиллюстрированный рис.\ref{}, называют мягким, режим, соответствующий рис.\ref{} - жестким режимом возбуждения. Различие между мягким и жестким режимами возбуждения, выявляемое при сравнении рис.\ref{} и рис.\ref{}, наглядно прослеживается и в характере зависимости амплитуды стационарных колебаний от степени связи, т.е. от величины представленной на рис.\ref{} для мягкого режима и на рис.\ref{} - для жесткого.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{circuit/9.jpg}
+	\caption{}
+	\label{fig:figure9}
+\end{figure}
 
-Наличие петли гистерезиса на рис.\ref{} объясняется тем, что колебания возникают при связи, большей, чем связь, при которой происходит срыв колебаний. Это обстоятельство становится ясным из рис.\ref{}: колебания возбуждаются при связи $K'_2(\omega_0) $, а срываются при $K''_2(\omega_0)<K'_2(\omega_0)$.
+Режим возбуждения автогенератора, проиллюстрированный рис.\ref{fig:figure8}, называют мягким, режим, соответствующий рис.\ref{eq:9} - жестким режимом возбуждения. Различие между мягким и жестким режимами возбуждения, выявляемое при сравнении рис.\ref{fig:figure8} и рис.\ref{fig:figure9}, наглядно прослеживается и в характере зависимости амплитуды стационарных колебаний от степени связи, т.е. от величины представленной на рис.\ref{fig:figure10-11}a для мягкого режима и на рис.\ref{fig:figure10-11}б - для жесткого.
 
-Следует заметить, что для возникновения колебаний в автогенераторе с жестким режимом возбуждения необходим внешний толчек, достаточный, чтобы вывести схему вверх через порог, задаваемый точкой $b$ (см.рис.\ref{}).
+\begin{figure}[h]
+	\centering
+	\begin{minipage}{0.49\linewidth}
+	\includegraphics[width=\linewidth]{circuit/10.jpg}
+	\end{minipage}
+	\begin{minipage}{0.49\linewidth}
+	\includegraphics[width=\linewidth]{circuit/11.jpg}
+	\end{minipage}
+	\caption{}
+	\label{fig:figure10-11}
+\end{figure}
+
+Наличие петли гистерезиса на рис.\ref{fig:figure10-11}б объясняется тем, что колебания возникают при связи, большей, чем связь, при которой происходит срыв колебаний. Это обстоятельство становится ясным из рис.\ref{fig:figure9}: колебания возбуждаются при связи $K'_2(\omega_0) $, а срываются при $K''_2(\omega_0)<K'_2(\omega_0)$.
+
+Следует заметить, что для возникновения колебаний в автогенераторе с жестким режимом возбуждения необходим внешний толчек, достаточный, чтобы вывести схему вверх через порог, задаваемый точкой $b$ (см.рис.\ref{fig:figure9}).
 
 \section{Анализ схемы автогенератора}
-Существует множество различных вариантов технической реали¬зации автогенератора.
-Простейшая схема автогенератора с индуктивной обратной связью, где в качестве усилительного элемента использован тран¬зистор, приведена на рис.\ref{}. Здесь избирательность по частоте обеспечивается параллельным колебательным контуром, включенным в коллекторную цепь транзистора $T$.
+\begin{wrapfigure}{l}{0.4\linewidth}
+\includegraphics[width=\linewidth]{circuit/12.jpg}
+\caption{}
+\label{fig:figure12}
+\vspace{-20pt}
+\end{wrapfigure}
+Существует множество различных вариантов технической реализации автогенератора.
+Простейшая схема автогенератора с индуктивной обратной связью, где в качестве усилительного элемента использован транзистор, приведена на рис.\ref{fig:figure2}. Здесь избирательность по частоте обеспечивается параллельным колебательным контуром, включенным в коллекторную цепь транзистора $T$.
 
 Колебательный контур, собственные потери которого характеризуются сопротивлением $r$, на резонансной частоте $\omega_0=1/{LC}$ имеет сопротивление $R=\rho^2/r$, где $\rho=\sqrt{L/C}$. Добротность контура $Q=\rho/r\gg1$
 
-Для анализа процессов, происходящих в генераторе, воспользуемся его эквивалентной схемой по переменному току, изображенной на риc.\ref{}. Коллекторный ток
+Для анализа процессов, происходящих в генераторе, воспользуемся его эквивалентной схемой по переменному току, изображенной на риc.\ref{fig:figure12}. Коллекторный ток
 \begin{equation*}
 \begin{aligned}
 &i_k=i_C+i_R+i_L \\
@@ -233,11 +308,18 @@ i_k=i_k(U_\text{б}-DU_k)=C\frac{\operatorname dU_k}{\operatorname dt}+\frac{U_k
 Для его решения необходимо знать конкретную зависимость $i_k(\kappa U_k)$, которая выше описана степенным полиномом \eqref{eq:2}. 
 
 При отсутствии внешних возмущений колебания в генераторе возникнут, когда будут выполнены условия его самовозбуждения. В этом случае выходное напряжение сначала будет нарастать со временем, а
-затем выйдет на стационарный уровень с постоянной амплитудой $U_\text{ст}$ (рис.\ref{}). Найдем
+затем выйдет на стационарный уровень с постоянной амплитудой $U_\text{ст}$ (рис.\ref{fig:figure13}). Найдем
 \begin{enumerate}
 \item условия возникновения колебаний в автогенераторе
 \item стационарную амплитуду автоколебаний.
 \end{enumerate}
+
+\begin{wrapfigure}{l}{0.4\linewidth}
+\includegraphics[width=\linewidth]{circuit/13.jpg}
+\caption{}
+\label{fig:figure13}
+\vspace{-20pt}
+\end{wrapfigure}
 
 Рассмотрим начальную стадию процесса генерации для времен много меньших времени установления колебаний $t_\text{уст}$. В этом случае уровень колебаний незначителен и транзистор находится в линейном режиме. В разложении $i_k=i_k(\kappa U_k)$ по степеням $\kappa U_k$ отличным от нуля будет лишь коэффициент $b_1=S_0$, остальные $b_n=0$ ($n\gg2$).
 
@@ -254,5 +336,106 @@ i_k=i_k(U_\text{б}-DU_k)=C\frac{\operatorname dU_k}{\operatorname dt}+\frac{U_k
 $\displaystyle r=\rho^2/R$ - собственное активное сопротивление колебательного контура, $\displaystyle \rho^2/r_k=r_\text{вн}$ - внесенное в контур сопротивление за счет шунтирующего действия на него внутреннего сопротивления транзистора $r_k$; $-S_0M/C=r_{-}$ - добавочное сопротивление, вносимое в контур за счет обратной связи. 
 
 Общее решение уравнения \eqref{eq:10}
+\begin{equation*}
+U_k=A_0\exp(-\alpha t)\cos(\omega_\text{св}t+\phi_0)
+\end{equation*}
+где $A_0$ и $\phi_0$ - постоянные, зависящие от начальных условий, $\omega_\text{св}=\sqrt{\omega_0^2-\alpha^2}$ - частота колебаний. Так как добротность $Q\gg1$, то $\alpha^2\ll \omega_0^2$ и $\omega_\text{св}=\omega_0^2$
 
+Амплитуда колебаний со временем будет расти, если $\alpha<0$ или 
+\begin{equation}
+\frac{S_0M}{rC}>1+\frac{\rho^2}{r\cdotr_k}=1+\frac{R}{r_k}
+\label{eq:12}
+\end{equation}
+
+Выполнение неравенства \eqref{eq:12} означает, что автогенератор является неустойчивой системой. По этому признаку \eqref{eq:12} есть условие самовозбуждения. Оно будет выполнено, если:
+\begin{enumerate}
+\item обратная связь положительна - коэффициент взаимоиндукции $M$ имеет такой знак, что сдвиг фазы между напряжениями коллектор-эмиттер и база-эмиттер равен $180\degree(r_{-}<0)$;
+\item обратная связь достаточно глубокая - энергия, вносимая в контур, превышает энергию потерь ($|r_{-}|>r+r_\text{вн}$). Частота генерации $\omega_\text{г}\simeq\omega_0$
+\end{enumerate}
+
+Если сопротивлени коллекторного перехода $r_k\gg R$ - резонансного сопротивления, то условие самовозбуждения будет иметь более простой вид:
+\begin{equation}
+\frac{S_0M}{rC}>1
+\label{eq:13}
+\end{equation}
+
+Перепишем левую часть \eqref{eq:13} в ином виде:
+\begin{equation*}
+\frac{S_0M}{rC}=S_0\frac{1}{r}\frac{L}{C}\frac{M}{L}=(S_0R)n=K_1K_2
+\end{equation*}
+где $K_1$ - коэффициент усиления резонансного усилителя; $n=K_2$ - коэффициент передачи трансформатора $L\div L_\text{св}$
+
+Очевидно, что \eqref{eq:13} совпадает с условием \eqref{eq:1}.
+
+Нарастание колебаний происходит за время $t_\text{уст}\gg 2\pi / \omega_0$. Поэтому генерируемое напряжение почти синусоидально в каждый из текущих моментов времени $t$ от начала генерации до ее установления, т.к. амплитуда и фаза колебаний являются медленными функциями времени. С учетом зависимости параметров транзистора от aмплитуды в соответствии с квазилинейным методом $S_0$ нужно заменить на $S_\text{ср}$, а $r_k$ на $R'_i$. Тогда вместо \eqref{eq:9} будем иметь уравнение 
+\begin{equation}
+\frac{\operatorname d^2U_k}{\operatorname dt^2}-2\alpha_\text{ср} \frac{\operatorname d U_k}{\operatorname dt}+\omega_0^2U_k=0
+\label{eq:14}
+\end{equation}
+где 
+\begin{equation}
+2\alpha_\text{ср} = \frac{1}{L}(r+\frac{\rho^2}{R'_i}-\frac{S_\text{ср}M}{C})
+\label{eq:15}
+\end{equation}
+
+В стационарном режиме $U_k=\text{const}$. Следовательно, постоянны и $R'_i$ и $S_\text{ср}$. Форма напряжения на контуре синусоидальна, что можно представить как результат решения уравнения для гармонического осциллятора
+\begin{equation}
+\frac{\operatorname d^2U_k}{\operatorname dt^2}+\omega_0^2U_k=0
+\label{eq:16}
+\end{equation}
+Уравнения \eqref{eq:14} переходит в \eqref{eq:16}, если $\alpha_\text{ср}=0$, или
+\begin{equation*}
+\frac{S_\text{ср}M}{rC}=1+\frac{R}{R'_i}
+\end{equation*}
+
+Полученное равенство определяет амплитуду стационарных колебаний и называется условием баланса амплитуд. Смысл его в том, что в стационарном режиме вносимая в контур энергия равна энергии потерь. Вносимая энергия характеризуется средним добавочным сопротивлением $r^\text{ср}_{-}=-S_\text{ср}M/C$, а энергия потерь - суммой $r+r^\text{ср}_{\text{вн}1}=r+\rho^2/R'_i$. В установившемся режиме $|r^\text{ср}_{-}|=r+r^\text{ср}_\text{вн}$.
+
+Если реакция коллекторного напряжения незначительна $R'_i\gg R$, то условием баланса амплитуд будет
+\begin{equation}
+\frac{S_\text{ср}M}{Cr}=1
+\label{eq:17}
+\end{equation}
+
+Отметим, что поскольку величина $S_\text{ср}R$ является коэффициентом усиления по первой гармонике $K_1$ нелинейного резонансного усилителя, то \eqref{eq:17} можно записать в виде
+\begin{equation*}
+K_1K_2=1
+\end{equation*}
+что совпадает с \eqref{eq:7}.
+
+Из соотношения \eqref{eq:17}, используя экспериментальную зависимость $S_\text{ср}$ от амплитуды колебания на базе транзистора (см.рис.\ref{fig:figure5}), можно найти стационарную амплитуду этого колебания.
+
+Значение стационарной амплитуды колебаний можно найти и с помощью колебательной характеристики. Действительно, с учетом \eqref{eq:4} условие $K_1K_2=1$ равносильно соотношению
+\begin{equation*}
+\frac{I_1(U_\text{б})}{U_\text{б}}RK_2=1
+\end{equation*}
+или
+\begin{equation}
+I_1(U_\text{б})=U_\text{б}\frac{1}{RK_2}
+\label{eq:18}
+\end{equation}
+Используя экспериментальные зависимости (см.рис\ref{fig:figure6}) и графически отыскивая решение уравнения \eqref{eq:18} относительно $U_\text{б}$, получим искомое значение стационарной амплитуды.
+\section{Описание лабораторного макета}
+
+\begin{wrapfigure}{l}{0.4\linewidth}
+\includegraphics[width=\linewidth]{circuit/14.jpg}
+\caption{}
+\label{fig:figure14}
+\vspace{-20pt}
+\end{wrapfigure}
+
+Обычно автогенератор питают не от двух источников, как это изображено на рис.\ref{fig:figure2}, а от одного. Поэтому экспериментально в данной лабораторной работе будет исследоваться генератор, выполненный по схеме, изображенной на рис.\ref{fig:figure14}. В качестве усилительного элемента используется кремниевый $n-p-n$ транзистор КТ306 Б. Его начальный режим но постоянному току обеспечивается резисторами $R_\text{э}, R_1$ и $R_2$. Напряжение, снимаемое с $R_1$ может плавно изменяться, что позволяет изменять начальное напряжение смещения на базе $E_\text{см}$ (по отношению к эмиттеру). Емкость $C_\text{бл}$	- блокировочная и служит для того, чтобы отфильтровать переменную составляющую напряжения, снимаемого с потенциометра. Сопротивление $R_\text{см}$ - элемент термостабилиэации начальной рабочей точки. Емкость $C_\text{э}$ отфильтровывает переменную составляющую, напряжения на $R_\text{э}$, если $1/\omega_0 C_\text{э}$, и обеспечивает таким образом "заземление" эмиттера по переменному току. В результате транзистор оказывается включенным по схеме с общим эмиттером.
+
+Помимо этого цепочка $R_\text{э}C_\text{э}$ используется для получения дополнительного напряжения смещения, зависящего от уровня генерируемых колебаний. В начальной стадии генерации, когда транзистор еще не вошел в нелинейный режим работы $t\ll t_\text{уст}$, смещение на базе $E_\text{см}$ будет определяться положением движка потенциометра $R_1$. По мере роста колебаний ток эмиттера приобретает форму импульсов с углом отсечки $\theta$, зависящим от уровня напряжения $U_\text{б}$. Причем импульсы тока эмиттера при попадании транзистора в режим насыщения не будут иметь провалов, характерных для тока коллектора. Это связано с тем, что прямое (отпирающее) напряжение на коллекторном переходе уменьшает лишь ток коллектора, в то время как эмиттерный переход как был так и остается в режиме инжекции носителей. Поэтому мы можем считать, что ток эмиттера в стационарном режиме имеет форму импульсов, изображенных на рис.\ref{fig:figure15} с углом отсечки $\theta$. Его постоянная составляющая равна $I_{\text{э}0}$. Протекая через сопротивление $R_\text{см}$ она создает на нем дополнительное падение напряжения: $U_\text{доп}=I_{\text{э}0}R_\text{э}$, величина которого зависит от амплитуды напряжения на базе $U_\text{б}$. Чем больше $U_\text{б}$, тем больше величина $I_{\text{э}0}$ и тем больше значение $U_\text{доп}$. Емкость $C_\text{э}$ отфильтровывает переменную составляющую, т.к. ее импеданс $1/\omega_0 C_\text{э}\ll R_\text{э}$.
+
+\begin{wrapfigure}{l}{0.4\linewidth}
+\includegraphics[width=\linewidth]{circuit/15.jpg}
+\caption{}
+\label{fig:figure15}
+\vspace{-20pt}
+\end{wrapfigure}
+
+Результирующее постоянное напряжение между базой и эмиттером $U_\text{бэ}=E_\text{см}-U_\text{доп}$, где $E_\text{см}$ - начальное напряжение смещения между базой и эмиттером, задаемое с помощью делителя $R_1\div R_2$. Таким образом, рабочая точка транзистора будет смещаться в сторону меньших напряжений на базе, т.е. в область меньших углов отсечки. Это, во-первых, дает возможность работать транзистору в более выгодном энергетическом режиме, т.к. уменьшается постоянная составляющая тока коллектора и, следовательно, мощность источника питания, рассеиваемая на коллекторном переходе.
+
+Во-вторых, уменьшается влияние транзистора на колебательный контур и тем самым повышается стабильность частоты автогенератора.
+\section{Эксперимент}
 \end{document}
